--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2568,7 +2568,7 @@ canvas.particles-js-canvas-el {
 }
 
 .flat-demo .skill-box .skillbar {
-  background-color: #e1e1e1;
+  background-color: #282A39;
 }
 
 .flat-demo .menu li a {
