--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -153,14 +153,22 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #FFF;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #0056b3;
+  background: -webkit-linear-gradient(#EE5690,#46489D);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-decoration: underline;
+}
+
+a.active{
+  background: -webkit-linear-gradient(#EE5690,#46489D);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 a:not([href]):not([tabindex]) {
