--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,20 @@ body {
   height: 0;
 }
 
+
+.container-img {
+  background-image: url('../img/background-setup.jpeg');
+  background-repeat: no-repeat;
+  filter: brightness(0.3);
+  background-attachment: fixed;
+  min-height: 280px;
+}
+
+.blockquote{
+  text-align: justify;
+  padding: 15px 0px 50px;
+}
+
 main#main {
   width: 100%;
   height: 100%;
