--- a/assets/css/color/purple.css
+++ b/assets/css/color/purple.css
@@ -52,6 +52,8 @@
   color: #FFF;
 }
 
+
+
 .menu li a,
 header .navbar-brand span,
 header .navbar-brand b,
@@ -176,6 +178,13 @@ header .navbar-brand b,
 }
 
 .social a:hover {
+
+  color: #FFF !important;
+  font-size: 1.5rem;
+  background: none !important;
+  -webkit-text-fill-color: #FFF;
+}
+.socails .list-inline-item a:hover {
 
   color: #FFF !important;
   font-size: 1.5rem;
