--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -51,7 +51,7 @@ body {
 
 
 .container-img {
-  background-image: url('../img/background-setup.jpeg');
+  background-image: url('./background-setup.jpeg');
   background-repeat: no-repeat;
   filter: brightness(0.3);
   background-attachment: fixed;
