--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -11,26 +11,26 @@
         <meta name="author" content="Retrina Group"/>
 
         <!-- FavIcon -->
-        <link rel="shortcut icon" href="assets/img/favicon.ico">
+        <link rel="shortcut icon" href="./favicon.ico">
 
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
 
         <!-- FontAwesome Css -->
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./font-awesome.min.css">
         <!-- Line icon Css -->
-        <link rel="stylesheet" href="assets/css/LineIcons.css">
+        <link rel="stylesheet" href="./LineIcons.css">
         <!-- Bootstrap Css -->
-        <link rel="stylesheet" href="assets/css/bootstrap.css">
+        <link rel="stylesheet" href="./bootstrap.css">
         <!-- Owl Carousel Css -->
-        <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="./owl.carousel.min.css">
         <!-- Magnific Popup Css -->
-        <link rel="stylesheet" href="assets/css/magnific-popup.css">
+        <link rel="stylesheet" href="./magnific-popup.css">
         <!-- Colors Css -->
-        <link rel="stylesheet" href="assets/css/color/purple.css" id="option-color">
+        <link rel="stylesheet" href="./color/purple.css" id="option-color">
         <!-- Custom Style CSS -->
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="./main.css">
     </head>
     <body data-spy="scroll" data-target="#scrollspy" data-offset="70" class="Dark-theme arshia-dark flat-demo">
 
@@ -43,7 +43,7 @@
             <nav id="scrollspy" class="navbar navbar-expand-lg header-nav">
                 <div class="container-fluid">
                     <!--<a class="navbar-brand font-weight-bold" href="#hero">Atomic<span class="base-color">Space</span></a> -->
-                    <a class="navbar-brand font-weight-bold" href="#hero"><img src="assets/img/atomic-space.png" width="100" alt=""></a>
+                    <a class="navbar-brand font-weight-bold" href="#hero"><img src="./atomic-space.png" width="100" alt=""></a>
                     <!-- Navbar Toggler Button Start -->
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#toggle-menu" aria-controls="toggle-menu" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="lni-menu size-md"></span>
@@ -968,7 +968,7 @@
                 <div class="row mt-5">
                     <div class="col-lg-12">
                         <div class="image-border">
-                            <div id="my-map" data-location-lat="-25.5275921" data-location-lng="-49.5992648" data-location-icon="assets/img/marker-map.png"></div>
+                            <div id="my-map" data-location-lat="-25.5275921" data-location-lng="-49.5992648" data-location-icon="./marker-map.png"></div>
                         </div>
                     </div>
                 </div>
@@ -1099,27 +1099,27 @@
         <!-- End Options -->
 
         <!-- JavaScripts -->
-        <script src="assets/js/jquery-3.4.1.min.js"></script>
+        <script src="./jquery-3.4.1.min.js"></script>
         <!-- Bootstrap Js -->
-        <script src="assets/js/bootstrap.js"></script>
+        <script src="./bootstrap.js"></script>
         <!-- Easing Js -->
-        <script src="assets/js/jquery.easing.min.js"></script>
+        <script src="./jquery.easing.min.js"></script>
         <!-- Typed Js -->
-        <script src="assets/js/typed.js"></script>
+        <script src="./typed.js"></script>
         <!-- Magnific Popup Js -->
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>
+        <script src="./jquery.magnific-popup.min.js"></script>
         <!-- Isotope Js -->
-        <script src="assets/js/isotope.pkgd.min.js"></script>
+        <script src="./isotope.pkgd.min.js"></script>
         <!-- Owl Carousel Js -->
-        <script src="assets/js/owl.carousel.min.js"></script>
+        <script src="./owl.carousel.min.js"></script>
         <!-- Particle Js -->
-        <script src="assets/js/particles-01.min.js"></script>
+        <script src="./particles-01.min.js"></script>
         <!-- particles app Js -->
-        <script src="assets/js/particles-01.app.js"></script>
+        <script src="./particles-01.app.js"></script>
         <!-- Map Js -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRemITiP7JRWpZwLhVt-T2x5MeUFE2KWs"></script>
         <!-- Custom JS -->
-        <script src="assets/js/arshia.js"></script>
+        <script src="./arshia.js"></script>
 
     </body>
     <!-- to build in vercel -->
