--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -51,7 +51,7 @@ body {
 
 
 .container-img {
-  background-image: url('./background-setup.jpeg');
+  background-image: url('../img/background-setup.jpeg');
   background-repeat: no-repeat;
   filter: brightness(0.3);
   background-attachment: fixed;
@@ -1355,6 +1355,7 @@ canvas.particles-js-canvas-el {
   background-color: #e1e1e1;
   margin: 0 0.25rem;
   border-radius: 1rem;
+  padding: 3px;
   transition: all 0.3s ease;
 }
 
@@ -2360,154 +2361,154 @@ canvas.particles-js-canvas-el {
 }
 
 /*-------------------------
-      arshia DARK
+      atomic-space DARK
 -------------------------*/
-.arshia-dark .header-sticky {
+.atomic-space-dark .header-sticky {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
 }
 
-.arshia-dark .header .menu-item-has-children .sub-menu {
+.atomic-space-dark .header .menu-item-has-children .sub-menu {
   background-color: #2c2d30;
   box-shadow: 3px 3px 3px #202125, -3px -3px 3px #3e3e3e;
 }
-.arshia-dark.flat-demo .header .menu-item-has-children .sub-menu {
+.atomic-space-dark.flat-demo .header .menu-item-has-children .sub-menu {
   background-color: rgba(52, 53, 57, 1) !important;
   box-shadow: 3px 3px 8px 0px rgba(45, 45, 45, 1) !important;
 }
 
-.arshia-dark .hero-02 {
+.atomic-space-dark .hero-02 {
   background: url("https://placehold.co/1920x1280") no-repeat;
   background-size: cover;
 }
 
-.arshia-dark .hero-06 .scroll-down span {
+.atomic-space-dark .hero-06 .scroll-down span {
   border: 3px solid #fafafa;
 }
 
-.arshia-dark .hero-06 .scroll-down span:before {
+.atomic-space-dark .hero-06 .scroll-down span:before {
   background-color: #fafafa;
 } 
 
-.arshia-dark .hero-06 {
+.atomic-space-dark .hero-06 {
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.69);
 }
 
-.arshia-dark {
+.atomic-space-dark {
   background-color: #282A39 !important;
   color: #fafafa;
 }
 
-.arshia-dark .post-sidebar-toggle, .arshia-dark .post-sidebar-content, .arshia-dark .aside-contents{
+.atomic-space-dark .post-sidebar-toggle, .atomic-space-dark .post-sidebar-content, .atomic-space-dark .aside-contents{
   background-color: #2c2d30;
   box-shadow: 3px 3px 3px #202125, -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .blog-single .post-sidebar-content{
+.atomic-space-dark .blog-single .post-sidebar-content{
   box-shadow: none;
 }
 
-.arshia-dark .post-sidebar-toggle span, .arshia-dark .post-sidebar-toggle span:before{
+.atomic-space-dark .post-sidebar-toggle span, .atomic-space-dark .post-sidebar-toggle span:before{
   background: #fafafa;
 }
-.arshia-dark .search .form-group button, .arshia-dark .aside-item ul li a, .arshia-dark .search .form-group input::placeholder,
-.arshia-dark .breadcrumb li a, .arshia-dark .blog-single .entry-meta li a i, .arshia-dark .comment-reply-link, .arshia-dark ::placeholder{
+.atomic-space-dark .search .form-group button, .atomic-space-dark .aside-item ul li a, .atomic-space-dark .search .form-group input::placeholder,
+.atomic-space-dark .breadcrumb li a, .atomic-space-dark .blog-single .entry-meta li a i, .atomic-space-dark .comment-reply-link, .atomic-space-dark ::placeholder{
   color: #fafafa;
 }
-.arshia-dark .search .form-group {
+.atomic-space-dark .search .form-group {
   background-color: #2c2d30;
   box-shadow: inset 3px 3px 3px #202125, inset -3px -3px 3px #3e3e3e;
 }
-.arshia-dark .comments-devider {
+.atomic-space-dark .comments-devider {
   background-color: #2c2d30;
   box-shadow: inset 2px 2px 4px #202125, inset -2px -2px 0px #3e3e3e;
 }
 
-.flat-demo.arshia-dark .post-sidebar-toggle, .flat-demo.arshia-dark .search .form-group, .flat-demo.arshia-dark .aside-contents{
+.flat-demo.atomic-space-dark .post-sidebar-toggle, .flat-demo.atomic-space-dark .search .form-group, .flat-demo.atomic-space-dark .aside-contents{
   background-color: rgba(52, 53, 57, 0.9) !important;
   box-shadow: 3px 3px 8px 0px rgba(45, 45, 45, 1) !important;
 }
-.flat-demo.arshia-dark .post-sidebar-content{
+.flat-demo.atomic-space-dark .post-sidebar-content{
   background-color: #2c2d30 !important;
   box-shadow: -2px -3px 3px #202125, 3px 3px 3px #3e3e3e !important;
 }
 
-.flat-demo.arshia-dark .blog-single .post-sidebar-content{
+.flat-demo.atomic-space-dark .blog-single .post-sidebar-content{
   box-shadow: none !important;
 }
 
-.arshia-dark .color-switcher h6 {
+.atomic-space-dark .color-switcher h6 {
   color: #1a1a1a;
 }
 
-.arshia-dark .header nav a, .arshia-dark .follow-label {
+.atomic-space-dark .header nav a, .atomic-space-dark .follow-label {
   color: #fafafa !important;
 }
 
-.arshia-dark .header-sticky {
+.atomic-space-dark .header-sticky {
   background-color: #2c2d30;
 }
 
-.arshia-dark .hero-images img {
+.atomic-space-dark .hero-images img {
   box-shadow: 3px 3px 3px #202125, -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .hero-images .square img {
+.atomic-space-dark .hero-images .square img {
   box-shadow: none;
 }
 
-.arshia-dark .text-dark, .arshia-dark .hero-content, .arshia-dark .hero-social li a, .arshia-dark .blog-single .modal-content {
+.atomic-space-dark .text-dark, .atomic-space-dark .hero-content, .atomic-space-dark .hero-social li a, .atomic-space-dark .blog-single .modal-content {
   color: #fafafa !important;
 }
 
-.arshia-dark .text-muted, .arshia-dark .about .personal-info span, .arshia-dark .language-skill h4 span {
+.atomic-space-dark .text-muted, .atomic-space-dark .about .personal-info span, .atomic-space-dark .language-skill h4 span {
   color: #d2d2d2 !important;
 }
 
-.arshia-dark .blog-content h5 a.text-dark:hover, .arshia-dark .blog-content h5 a.text-dark:focus {
+.atomic-space-dark .blog-content h5 a.text-dark:hover, .atomic-space-dark .blog-content h5 a.text-dark:focus {
   color: #d2d2d2 !important;
 }
 
-.arshia-dark .hero-03 .personal-image img {
+.atomic-space-dark .hero-03 .personal-image img {
   box-shadow: 3px 3px 3px #202125, -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .testimonial .owl-carousel .testimonial-image::before, .arshia-dark .skill-box .skillbar,
-.arshia-dark .blog-item:before, .arshia-dark .blog-image, .arshia-dark .testimonial .owl-carousel .testimonial-image, .arshia-dark.flat-demo .blog-image,
-.arshia-dark .blog-single .modal-content, .arshia-dark .portfolio-single .modal-content {
+.atomic-space-dark .testimonial .owl-carousel .testimonial-image::before, .atomic-space-dark .skill-box .skillbar,
+.atomic-space-dark .blog-item:before, .atomic-space-dark .blog-image, .atomic-space-dark .testimonial .owl-carousel .testimonial-image, .atomic-space-dark.flat-demo .blog-image,
+.atomic-space-dark .blog-single .modal-content, .atomic-space-dark .portfolio-single .modal-content {
   background-color: #2c2d30;
 }
 
-.arshia-dark .box-border, .arshia-dark .box-hover-border, .arshia-dark .button-border, .arshia-dark .image-border {
+.atomic-space-dark .box-border, .atomic-space-dark .box-hover-border, .atomic-space-dark .button-border, .atomic-space-dark .image-border {
   background-color: #2c2d30;
   box-shadow: 3px 3px 3px #202125, -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .box-hover-border:hover {
+.atomic-space-dark .box-hover-border:hover {
   box-shadow: inset 3px 3px 3px #202125, inset -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .pill-button:hover, .arshia-dark .pill-button.active {
+.atomic-space-dark .pill-button:hover, .atomic-space-dark .pill-button.active {
   border: none;
   box-shadow: inset 3px 3px 3px #202125, inset -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .testimonial .owl-carousel .testimonial-image::after, .arshia-dark .skill-box .skillbar, .arshia-dark .blog-image:after {
+.atomic-space-dark .testimonial .owl-carousel .testimonial-image::after, .atomic-space-dark .skill-box .skillbar, .atomic-space-dark .blog-image:after {
   box-shadow: inset 3px 3px 3px #202125, inset -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .testimonial-image-border, .arshia-dark .testimonial .owl-carousel .testimonial-image-border {
+.atomic-space-dark .testimonial-image-border, .atomic-space-dark .testimonial .owl-carousel .testimonial-image-border {
   box-shadow: 3px 3px 3px #202125, -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .testimonial .owl-dot.active span {
+.atomic-space-dark .testimonial .owl-dot.active span {
   box-shadow: -1px -1px 4px rgba(83, 83, 83, 0.4), 1px 1px 4px rgba(0, 0, 0, 0.35);
 }
 
-.arshia-dark .blog-intro {
+.atomic-space-dark .blog-intro {
   box-shadow: -2px -2px 7px rgba(83, 83, 83, 0.4), 2px 2px 7px rgba(0, 0, 0, 0.35);
 }
 
-.arshia-dark .contact .form-item .form-group {
+.atomic-space-dark .contact .form-item .form-group {
   background-color: #2c2d30;
   box-shadow: inset 3px 3px 3px #202125, inset -3px -3px 3px #3e3e3e;
   -webkit-box-shadow: inset 3px 3px 3px #202125, inset -3px -3px 3px #3e3e3e;
@@ -2516,66 +2517,66 @@ canvas.particles-js-canvas-el {
   -ms-box-shadow: inset 3px 3px 3px #202125, inset -3px -3px 3px #3e3e3e;
 }
 
-.arshia-dark .portfolio-single .close {
+.atomic-space-dark .portfolio-single .close {
   color: white;
 }
 
-.arshia-dark .hero-04 .hero-item-image {
+.atomic-space-dark .hero-04 .hero-item-image {
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
 }
 
-.arshia-dark .hero-04 .swiper-slide {
+.atomic-space-dark .hero-04 .swiper-slide {
   background: #2c2d30;
 }
 
-.arshia-dark .hero-04 .swiper-button-next, .arshia-dark .hero-04 .swiper-button-prev {
+.atomic-space-dark .hero-04 .swiper-button-next, .atomic-space-dark .hero-04 .swiper-button-prev {
   background-color: #fafafa;
 }
 
-.arshia-dark .hero-04 .swiper-button-next::after, .arshia-dark .hero-04 .swiper-button-prev::after {
+.atomic-space-dark .hero-04 .swiper-button-next::after, .atomic-space-dark .hero-04 .swiper-button-prev::after {
   color: #1a1a1a;
 }
 
-.arshia-dark .hero-05 {
+.atomic-space-dark .hero-05 {
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
 
-.arshia-dark .hero-05 .scroll-down span {
+.atomic-space-dark .hero-05 .scroll-down span {
   border: 3px solid #fafafa;
 }
 
-.arshia-dark .hero-05 .scroll-down span:before {
+.atomic-space-dark .hero-05 .scroll-down span:before {
   background-color: #fafafa;
 }
 
-.arshia-dark .blog-content h6 a:hover {
+.atomic-space-dark .blog-content h6 a:hover {
   color:#d2d2d2 !important;
 }
 
-.arshia-dark .page-hero {
+.atomic-space-dark .page-hero {
   background-color: #2b2b2b;
 }
 
 @media (max-width: 1199px) {
-  .flat-demo.arshia-dark .post-sidebar-toggle.open{
+  .flat-demo.atomic-space-dark .post-sidebar-toggle.open{
     background-color: rgba(0, 0, 0, 0.5) !important;
   }
 }
 
 @media (max-width: 991px) {
-  .arshia-dark .header {
+  .atomic-space-dark .header {
     background-color: #282A39;
   }
-  .arshia-dark .header{
+  .atomic-space-dark .header{
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
   }
-  .arshia-dark .navbar-toggler span {
+  .atomic-space-dark .navbar-toggler span {
     color: #fafafa;
   }
-  .flat-demo.arshia-dark .blog-single .post-sidebar-content {
+  .flat-demo.atomic-space-dark .blog-single .post-sidebar-content {
     box-shadow: -2px -3px 3px #202125, 3px 3px 3px #3e3e3e !important;
   }
-  .arshia-dark .blog-single .post-sidebar-content {
+  .atomic-space-dark .blog-single .post-sidebar-content {
     box-shadow: 3px 3px 3px #202125, -3px -3px 3px #3e3e3e;
   }
 }
@@ -2674,29 +2675,29 @@ canvas.particles-js-canvas-el {
 /*-------------------------
       Flat Demo Dark
 -------------------------*/
-.arshia-dark.flat-demo .box-hover-border:hover {
+.atomic-space-dark.flat-demo .box-hover-border:hover {
   box-shadow: none;
 }
 
-.arshia-dark.flat-demo .header-sticky, .arshia-dark.flat-demo .testimonial-image-border, .arshia-dark.flat-demo .blog-single .modal-content, .arshia-dark.flat-demo .portfolio-single .modal-content {
+.atomic-space-dark.flat-demo .header-sticky, .atomic-space-dark.flat-demo .testimonial-image-border, .atomic-space-dark.flat-demo .blog-single .modal-content, .atomic-space-dark.flat-demo .portfolio-single .modal-content {
   background-color: #282A39;
 }
 
-.arshia-dark.flat-demo .testimonial-image-border img {
+.atomic-space-dark.flat-demo .testimonial-image-border img {
   border: 1px solid #3c3c3c;
 }
 
-.arshia-dark.flat-demo .box-border, .arshia-dark.flat-demo .box-hover-border, .arshia-dark.flat-demo .contact .form-item .form-group,
-.arshia-dark.flat-demo #my-map {
+.atomic-space-dark.flat-demo .box-border, .atomic-space-dark.flat-demo .box-hover-border, .atomic-space-dark.flat-demo .contact .form-item .form-group,
+.atomic-space-dark.flat-demo #my-map {
   background-color: rgba(52, 53, 57, 0.9);
   box-shadow: 0px 0px 2px rgba(79, 79, 79, 0.2) !important;
 }
 
-.arshia-dark.flat-demo .box-hover-border:hover {
+.atomic-space-dark.flat-demo .box-hover-border:hover {
   box-shadow: none;
 }
 
-.arshia-dark.flat-demo .portfolio-filter .pill-button {
+.atomic-space-dark.flat-demo .portfolio-filter .pill-button {
   color: #fafafa;
 }
 
@@ -2773,85 +2774,85 @@ canvas.particles-js-canvas-el {
 /*-------------------------
       Mono Color Dark
 -------------------------*/
-.mono.arshia-dark .header nav .nav-pills a.active, .mono.arshia-dark .header nav a:hover {
+.mono.atomic-space-dark .header nav .nav-pills a.active, .mono.atomic-space-dark .header nav a:hover {
   color: #989898 !important;
 }
 
-.mono.arshia-dark .testimonial .testimonial-item::before {
+.mono.atomic-space-dark .testimonial .testimonial-item::before {
   color: #fafafa;
 }
 
-.mono.arshia-dark .text-white {
+.mono.atomic-space-dark .text-white {
   color: #3c3c3c !important;
 }
 
-.mono.arshia-dark header .navbar-brand span, .mono.arshia-dark header .navbar-brand b, .mono.arshia-dark .menu li a, .mono.arshia-dark .pill-button,
-.mono.arshia-dark .language-skill ul li i {
+.mono.atomic-space-dark header .navbar-brand span, .mono.atomic-space-dark header .navbar-brand b, .mono.atomic-space-dark .menu li a, .mono.atomic-space-dark .pill-button,
+.mono.atomic-space-dark .language-skill ul li i {
   color: #fafafa;
 }
 
-.mono.arshia-dark .base-color {
+.mono.atomic-space-dark .base-color {
   color: #dedede !important;
 }
 
-.mono.arshia-dark .bg-base-color {
+.mono.atomic-space-dark .bg-base-color {
   background-color: #f8f8f8 !important;
 }
 
-.mono.arshia-dark .hero-social li a:hover, .mono.arshia-dark .blog-link a:hover {
+.mono.atomic-space-dark .hero-social li a:hover, .mono.atomic-space-dark .blog-link a:hover {
   color: #a1a1a1 !important;
 }
 
-.mono.arshia-dark .timeline-icon {
+.mono.atomic-space-dark .timeline-icon {
   border: 1px solid #dedede;
   background-color: #dedede;
 }
 
-.mono.arshia-dark .timeline-item::before {
+.mono.atomic-space-dark .timeline-item::before {
   border: 1px solid #dedede;
 }
 
-.mono.arshia-dark .timeline-year, .mono.arshia-dark .portfolio .portfolio-icon a:first-child, .mono.arshia-dark .portfolio .portfolio-icon a {
+.mono.atomic-space-dark .timeline-year, .mono.atomic-space-dark .portfolio .portfolio-icon a:first-child, .mono.atomic-space-dark .portfolio .portfolio-icon a {
   color: #dedede;
 }
 
-.mono.arshia-dark .skill-box .fill-skillbar, .mono.arshia-dark .testimonial .owl-dot.active span {
+.mono.atomic-space-dark .skill-box .fill-skillbar, .mono.atomic-space-dark .testimonial .owl-dot.active span {
   background-color: #dedede;
 }
 
-.mono.arshia-dark .testimonial .owl-carousel .owl-dot span {
+.mono.atomic-space-dark .testimonial .owl-carousel .owl-dot span {
   background-color: #3c3c3c;
 }
 
-.mono.arshia-dark .testimonial .owl-carousel .owl-dot.active span {
+.mono.atomic-space-dark .testimonial .owl-carousel .owl-dot.active span {
   background-color: #dedede !important;
 }
 
-.mono.arshia-dark .portfolio .portfolio-item-content::before {
+.mono.atomic-space-dark .portfolio .portfolio-item-content::before {
   background-color: rgba(250, 250, 250, 0.8);
 }
 
-.mono.arshia-dark .portfolio .img-overlay-content h5 {
+.mono.atomic-space-dark .portfolio .img-overlay-content h5 {
   color: #3c3c3c;
 }
 
-.mono.arshia-dark .portfolio .portfolio-icon a:first-child, .mono.arshia-dark .portfolio .portfolio-icon a {
+.mono.atomic-space-dark .portfolio .portfolio-icon a:first-child, .mono.atomic-space-dark .portfolio .portfolio-icon a {
   background-color: #3c3c3c;
 }
 
-.mono.arshia-dark .menu-toggler span {
+.mono.atomic-space-dark .menu-toggler span {
   background-color: #fafafa;
 }
 
-.mono.arshia-dark .floating {
+.mono.atomic-space-dark .floating {
   background: #f8f8f8;
 }
 
-.mono.arshia-dark .circle-2 {
+.mono.atomic-space-dark .circle-2 {
   background: #dedede;
 }
 
-.mono.arshia-dark .circle {
+.mono.atomic-space-dark .circle {
   background: #e1e1e1;
 }
 .follow-label::before {
@@ -2886,29 +2887,29 @@ canvas.particles-js-canvas-el {
 /*-------------------------
      Dark Flat Mono
 -------------------------*/
-.arshia-dark.mono.flat-demo .pill-button {
+.atomic-space-dark.mono.flat-demo .pill-button {
   background-color: #fafafa;
   border: 1px solid #fafafa;
   color: #5f5f5f !important;
 }
 
-.arshia-dark.mono.flat-demo .pill-button:hover {
+.atomic-space-dark.mono.flat-demo .pill-button:hover {
   background-color: #dedede;
   border: 1px solid;
 }
 
-.arshia-dark.mono.flat-demo .portfolio-filter .pill-button {
+.atomic-space-dark.mono.flat-demo .portfolio-filter .pill-button {
   background-color: transparent;
   border: none;
   color: #d2d2d2 !important;
 }
 
-.arshia-dark.mono.flat-demo .portfolio-filter .pill-button.active, .arshia-dark.mono.flat-demo .portfolio-filter .pill-button:hover {
+.atomic-space-dark.mono.flat-demo .portfolio-filter .pill-button.active, .atomic-space-dark.mono.flat-demo .portfolio-filter .pill-button:hover {
   background-color: #dedede;
   color: #5f5f5f !important;
 }
 
-.arshia-dark.mono.flat-demo .skill-box .skillbar {
+.atomic-space-dark.mono.flat-demo .skill-box .skillbar {
   background-color: #3c3c3c !important;
 }
 
