--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -320,7 +320,7 @@ a, button {
   top: calc(50% - 20px);
   left: calc(50% - 20px);
   z-index: 99999;
-  border: 4px solid #e3e5d2;
+  border: 4px solid #46489D;
   border-radius: 50%;
   width: 40px;
   height: 40px;
